--- a/styles.css
+++ b/styles.css
@@ -4,24 +4,67 @@
     box-sizing: border-box;
 }
 
+body {
+    overflow-x: hidden;
+}
+/* ============================================================================================================= */
+/* HEADER */
+/* ============================================================================================================= */
 .header {
-    background-color: rgb(250, 233, 254);
+    background-color: rgb(255, 255, 255);
+    opacity: .7;
+    font-family: 'Beau Rivage', cursive;
+}
+/* ============================================================================================================= */
+/* MAIN */
+/* ============================================================================================================= */
+.container__main {
+    background-color: #f0dfc8;
+}
+
+.main-h1 {
+    color: white;
     font-family: 'Beau Rivage', cursive;
 }
 
-.footer {
-    background-color: rgb(250, 233, 254);
+.beauty {
+    color: #7C878E;
+}
+
+.brow {
+    color: #7FA9AE;
+}
+
+.bar {
+    color: #D7A3AB;
 }
 
 .imag {
     height: 40vh;
     object-fit: cover;
 }
+/* ============================================================================================================= */
+/* FOOTER */
+/* ============================================================================================================= */
+.footer {
+    background-color: rgb(255, 255, 255);
+    font-family: 'Beau Rivage', cursive;
+}
 
 .icon {
     font-size: 60px;
-    background-color: rgb(250, 165, 165);
-    color: rgb(255, 255, 255);
+}
+
+.iconi {
+    color: #7C878E;
+}
+
+.iconf {
+    color: #7FA9AE;
+}
+
+.iconw {
+    color: #D7A3AB;
 }
 
 .img__footer {
@@ -31,6 +74,9 @@
     padding: 0;
 }
 
+/* ============================================================================================================= */
+/* NOSOTROS */
+/* ============================================================================================================= */
 .nosotros {
     background-color: #f0dfc8;
 }
@@ -39,9 +85,23 @@
     font-family: 'Beau Rivage', cursive;
 }
 
-
+/* ============================================================================================================= */
+/* SERVICIO */
+/* ============================================================================================================= */
 .servicios {
     background-color: #f0dfc8;
+}
+
+.card1 {
+    background-color: #7C878E;
+}
+
+.card2 {
+    background-color: #7FA9AE;
+}
+
+.card3 {
+    background-color: #D7A3AB;
 }
 
 
@@ -57,5 +117,64 @@
     .img-fluid {
         width: 50%;
     }
+
+    .main-h1 {
+        color: white;
+        font-family: 'Beau Rivage', cursive;
+        font-size: 100px !important;
+    }
+
+    .textServicios {
+        font-size: 100px !important;
+        font-family: 'Oswald', sans-serif !important;
+    }
+    
+    .price {
+        font-size: 60px !important;
+        font-weight: bold !important;
+    }
+
+    .text-title {
+        font-family: 'Beau Rivage', cursive !important;
+        font-size: 100px !important;
+    }
 }
 
+@media only screen and (min-width: 992px) {
+    .main-h1 {
+        color: white;
+        font-family: 'Beau Rivage', cursive;
+        font-size: 150px !important;
+        padding-top: 200px;
+    }
+}
+
+/* ============================================================================================================= */
+/* SERVICIO OTRA PAG */
+/* ============================================================================================================= */
+
+.servicios__page {
+    background-color: #f0dfc8;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='192' height='192' viewBox='0 0 192 192'%3E%3Cpath fill='%23d7a3ab' fill-opacity='0.4' d='M192 15v2a11 11 0 0 0-11 11c0 1.94 1.16 4.75 2.53 6.11l2.36 2.36a6.93 6.93 0 0 1 1.22 7.56l-.43.84a8.08 8.08 0 0 1-6.66 4.13H145v35.02a6.1 6.1 0 0 0 3.03 4.87l.84.43c1.58.79 4 .4 5.24-.85l2.36-2.36a12.04 12.04 0 0 1 7.51-3.11 13 13 0 1 1 .02 26 12 12 0 0 1-7.53-3.11l-2.36-2.36a4.93 4.93 0 0 0-5.24-.85l-.84.43a6.1 6.1 0 0 0-3.03 4.87V143h35.02a8.08 8.08 0 0 1 6.66 4.13l.43.84a6.91 6.91 0 0 1-1.22 7.56l-2.36 2.36A10.06 10.06 0 0 0 181 164a11 11 0 0 0 11 11v2a13 13 0 0 1-13-13 12 12 0 0 1 3.11-7.53l2.36-2.36a4.93 4.93 0 0 0 .85-5.24l-.43-.84a6.1 6.1 0 0 0-4.87-3.03H145v35.02a8.08 8.08 0 0 1-4.13 6.66l-.84.43a6.91 6.91 0 0 1-7.56-1.22l-2.36-2.36A10.06 10.06 0 0 0 124 181a11 11 0 0 0-11 11h-2a13 13 0 0 1 13-13c2.47 0 5.79 1.37 7.53 3.11l2.36 2.36a4.94 4.94 0 0 0 5.24.85l.84-.43a6.1 6.1 0 0 0 3.03-4.87V145h-35.02a8.08 8.08 0 0 1-6.66-4.13l-.43-.84a6.91 6.91 0 0 1 1.22-7.56l2.36-2.36A10.06 10.06 0 0 0 107 124a11 11 0 0 0-22 0c0 1.94 1.16 4.75 2.53 6.11l2.36 2.36a6.93 6.93 0 0 1 1.22 7.56l-.43.84a8.08 8.08 0 0 1-6.66 4.13H49v35.02a6.1 6.1 0 0 0 3.03 4.87l.84.43c1.58.79 4 .4 5.24-.85l2.36-2.36a12.04 12.04 0 0 1 7.51-3.11A13 13 0 0 1 81 192h-2a11 11 0 0 0-11-11c-1.94 0-4.75 1.16-6.11 2.53l-2.36 2.36a6.93 6.93 0 0 1-7.56 1.22l-.84-.43a8.08 8.08 0 0 1-4.13-6.66V145H11.98a6.1 6.1 0 0 0-4.87 3.03l-.43.84c-.79 1.58-.4 4 .85 5.24l2.36 2.36a12.04 12.04 0 0 1 3.11 7.51A13 13 0 0 1 0 177v-2a11 11 0 0 0 11-11c0-1.94-1.16-4.75-2.53-6.11l-2.36-2.36a6.93 6.93 0 0 1-1.22-7.56l.43-.84a8.08 8.08 0 0 1 6.66-4.13H47v-35.02a6.1 6.1 0 0 0-3.03-4.87l-.84-.43c-1.59-.8-4-.4-5.24.85l-2.36 2.36A12 12 0 0 1 28 109a13 13 0 1 1 0-26c2.47 0 5.79 1.37 7.53 3.11l2.36 2.36a4.94 4.94 0 0 0 5.24.85l.84-.43A6.1 6.1 0 0 0 47 84.02V49H11.98a8.08 8.08 0 0 1-6.66-4.13l-.43-.84a6.91 6.91 0 0 1 1.22-7.56l2.36-2.36A10.06 10.06 0 0 0 11 28 11 11 0 0 0 0 17v-2a13 13 0 0 1 13 13c0 2.47-1.37 5.79-3.11 7.53l-2.36 2.36a4.94 4.94 0 0 0-.85 5.24l.43.84A6.1 6.1 0 0 0 11.98 47H47V11.98a8.08 8.08 0 0 1 4.13-6.66l.84-.43a6.91 6.91 0 0 1 7.56 1.22l2.36 2.36A10.06 10.06 0 0 0 68 11 11 11 0 0 0 79 0h2a13 13 0 0 1-13 13 12 12 0 0 1-7.53-3.11l-2.36-2.36a4.93 4.93 0 0 0-5.24-.85l-.84.43A6.1 6.1 0 0 0 49 11.98V47h35.02a8.08 8.08 0 0 1 6.66 4.13l.43.84a6.91 6.91 0 0 1-1.22 7.56l-2.36 2.36A10.06 10.06 0 0 0 85 68a11 11 0 0 0 22 0c0-1.94-1.16-4.75-2.53-6.11l-2.36-2.36a6.93 6.93 0 0 1-1.22-7.56l.43-.84a8.08 8.08 0 0 1 6.66-4.13H143V11.98a6.1 6.1 0 0 0-3.03-4.87l-.84-.43c-1.59-.8-4-.4-5.24.85l-2.36 2.36A12 12 0 0 1 124 13a13 13 0 0 1-13-13h2a11 11 0 0 0 11 11c1.94 0 4.75-1.16 6.11-2.53l2.36-2.36a6.93 6.93 0 0 1 7.56-1.22l.84.43a8.08 8.08 0 0 1 4.13 6.66V47h35.02a6.1 6.1 0 0 0 4.87-3.03l.43-.84c.8-1.59.4-4-.85-5.24l-2.36-2.36A12 12 0 0 1 179 28a13 13 0 0 1 13-13zM84.02 143a6.1 6.1 0 0 0 4.87-3.03l.43-.84c.8-1.59.4-4-.85-5.24l-2.36-2.36A12 12 0 0 1 83 124a13 13 0 1 1 26 0c0 2.47-1.37 5.79-3.11 7.53l-2.36 2.36a4.94 4.94 0 0 0-.85 5.24l.43.84a6.1 6.1 0 0 0 4.87 3.03H143v-35.02a8.08 8.08 0 0 1 4.13-6.66l.84-.43a6.91 6.91 0 0 1 7.56 1.22l2.36 2.36A10.06 10.06 0 0 0 164 107a11 11 0 0 0 0-22c-1.94 0-4.75 1.16-6.11 2.53l-2.36 2.36a6.93 6.93 0 0 1-7.56 1.22l-.84-.43a8.08 8.08 0 0 1-4.13-6.66V49h-35.02a6.1 6.1 0 0 0-4.87 3.03l-.43.84c-.79 1.58-.4 4 .85 5.24l2.36 2.36a12.04 12.04 0 0 1 3.11 7.51A13 13 0 1 1 83 68a12 12 0 0 1 3.11-7.53l2.36-2.36a4.93 4.93 0 0 0 .85-5.24l-.43-.84A6.1 6.1 0 0 0 84.02 49H49v35.02a8.08 8.08 0 0 1-4.13 6.66l-.84.43a6.91 6.91 0 0 1-7.56-1.22l-2.36-2.36A10.06 10.06 0 0 0 28 85a11 11 0 0 0 0 22c1.94 0 4.75-1.16 6.11-2.53l2.36-2.36a6.93 6.93 0 0 1 7.56-1.22l.84.43a8.08 8.08 0 0 1 4.13 6.66V143h35.02z'%3E%3C/path%3E%3C/svg%3E");;
+}
+
+.textServicios {
+    font-size: 40px;
+    font-family: 'Oswald', sans-serif;
+}
+
+.price {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.container__servicios {
+    display: grid;
+    align-items: center;
+    justify-content: center;
+}
+
+.text-title {
+    font-family: 'Beau Rivage', cursive;
+    font-size: 55px;
+}
